# python_stepik_func

./: .gitignore  README.md  pyproject.toml  unit_2.py  unit_3.py  unit_4.py  unit_5.py  unit_6.py
