[tool.poetry]
name = "python-stepik-func"
version = "0.1.0"
description = ""
authors = ["Siarhei Mazanik <sergey.mazanik1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
